framec_tests/language_specific/python/v3_cli_project/positive/simple_project/mod_a.frm
@target python

system S1 {
    machine:
        $A {
            e() { -> $B() }
        }
        $B { e() { pass } }
}

