framec_tests/language_specific/python/v3_cli_project/negative/bad_project/mod_a.frm
@target python

system S1 {
    machine:
        $A {
            e() { -> $Missing() }
        }
}

